# guides

./: .gitignore  LICENSE  README.md  readthedocs.yml  setup.cfg  tox.ini
.github/workflows/: testdocs.yml
docs/: cleanquotes.py  lint.py
docs/source/: conf.py  index.rst  spelling_wordlist.txt
docs/source/_locales/fr/LC_MESSAGES/: index.po
docs/source/_locales/fr/LC_MESSAGES/harvest-guide/: complete-the-pick.po  difficult-situations.po  how-to-harvest.po  index.po  pick-equipment.po  prepare-for-the-pick.po  record-data-in-saskatoon.po  supervise-harvest.po  welcome-volunteer-pickers.po
docs/source/_locales/fr/LC_MESSAGES/pre-pick-guide/: index.po  life-cycle-of-a-pick-on-saskatoon.po  planning-a-harvest.po  support-for-pickleaders.po
docs/source/_static/: custom.css
docs/source/harvest-guide/: complete-the-pick.md  difficult-situations.md  how-to-harvest.md  index.rst  pick-equipment.md  prepare-for-the-pick.md  record-data-in-saskatoon.md  supervise-harvest.md  welcome-volunteer-pickers.md
docs/source/harvest-guide/annexes/: 1-bike-safety.md  2-ladder-security.md  3-complementary-infos.md  3-complemtary-infos.md  5-contacting-other-members-of-the-collective.md  index.rst
docs/source/pre-pick-guide/: index.rst  life-cycle-of-a-pick-on-saskatoon.md  planning-a-harvest.md  support-for-pickleaders.md
docs/source/pre-pick-guide/annexes/: A-beneficiary-organizations.md  C-fruit-ripeness.md  D-using-the-property-list.md  E-tree-owner-script-update.md  index.rst
locales/fr/LC_MESSAGES/: index.po
(+10 files in other folders)
