[metadata]
name        = LesFruitsDéfendusGuides
version     = dev.0
description = Les Fruits Défendus pickleaders and Saskatoon users guides
author      = Les Fruits Défendus
license     = Creative Commons Attribution ShareAlike 3.0 Unported License (CC BY-SA)

[options]
python_requires = >= 3.6
install_requires =
    Sphinx
    sphinx-intl
    recommonmark
    sphinx_rtd_theme
    sphinxcontrib-spelling
