[metadata]
name        = Les Fruits Défendus pickleaders and Saskatoon users guides
author      = Les Fruits Défendus
license     = Creative Commons Attribution ShareAlike 3.0 Unported License (CC BY-SA)

[options]
python_requires = >= 3.6
install_requires =
    Sphinx
    sphinx-intl
    myst-parser
    sphinx-book-theme
    sphinxcontrib-spelling
