[metadata]
name        = Les Fruits Défendus pick-leaders and Saskatoon users guides
author      = Les Fruits Défendus
license     = Creative Commons Attribution ShareAlike 3.0 Unported License (CC BY-SA)

[options]
python_requires = >= 3.6
install_requires =
    ; transitive dependencies pinned for compatibility with sphinx4.
    sphinxcontrib-applehelp==1.0.4
    sphinxcontrib-devhelp==1.0.2
    sphinxcontrib-htmlhelp==2.0.1
    sphinxcontrib-qthelp==1.0.3
    sphinxcontrib-serializinghtml==1.1.5
    ; main dependencies
    Sphinx == 4.5.0
    sphinx-intl == 2.0.1
    myst-parser == 0.18.1
    sphinx-book-theme == 0.3.2
    sphinxcontrib-spelling == 7.7.0
